--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ body{
   color: white;
 }
 
+/*Sección Header*/
 header {
   background-color: #50A;
   color: white;
@@ -18,6 +19,7 @@ header {
   width: 100%;
 }
 
+/* Sección barra de navegación */
 .navbar {
   color: white;
   padding: 10px;
@@ -32,14 +34,13 @@ header {
   height: 50px;
 }
 
+/*Sección de Presentación*/
 
-footer {
-  background-color: #222;
-  color: white;
-  text-align: center;
-  padding: 15px;
-}
+/*Sección Sobre Mi*/
 
+/*Sección de Mis Proyectos*/
+
+/*Sección de Mis Habilidades*/
 .skills {
   padding: 40px;
   background-color: #f8f9fa;
@@ -85,6 +86,18 @@ footer {
   object-fit: contain;
   margin: auto;
 }
+
+/*Sección de Formulario de Contacto*/
+
+/*Sección de Pie de Página*/
+footer {
+  background-color: #222;
+  color: white;
+  text-align: center;
+  padding: 15px;
+}
+
+/*Responsive Design*/
 @media (max-width: 768px) {
   .cards {
     grid-template-columns: 1fr;
