--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 body{
@@ -14,7 +15,9 @@ body{
 header {
   background-color: #50A;
   color: white;
-  text-align: center;
+  display: flex;
+  text-align: right;
+  justify-content: space-between;
   padding: 5px;
   width: 100%;
 }
@@ -35,8 +38,28 @@ header {
 }
 
 /*Sección de Presentación*/
+.presentation {
+  color: white;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.contactame{
+  height: 50px;
+  border-radius: 10px;
+  text-align: center;
+  padding: 10px;
+}
 
 /*Sección Sobre Mi*/
+.aboutme {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
 
 /*Sección de Mis Proyectos*/
 .projects {
@@ -56,11 +79,14 @@ header {
 
 /*Sección de Mis Habilidades*/
 .skills {
-  color: black;
+  color: white;
   padding: 40px;
   text-align: center;
 }
 
+.skills h2{
+  color: white;
+}
 .cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -102,7 +128,35 @@ header {
 }
 
 /*Sección de Formulario de Contacto*/
+.contacto {
+  padding: 60px 20px;
+  text-align: center;
+  color: white;
+}
 
+.contacto form {
+  max-width: 600px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  text-align: left;
+  color: white;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
+.contacto label {
+  font-weight: bold;
+  color: white; 
+}
+.contacto button {
+  padding: 12px;
+  background-color: lightgray;
+  color: black;
+  width: 100px;
+} 
 
 /*Boton para subir al inicio*/
 .boton-subir {
@@ -118,7 +172,7 @@ header {
 }
 
 .boton-subir:hover {
-  background-color: #12005a;
+  background-color: green;
   transform: translateY(-3px);
 }
 
